--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "email-agent",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,8 +12,11 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "html-to-text": "^9.0.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16"
